k8/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /foo
          backend:
            serviceName: foo-app
            servicePort: 8080
        - path: /bar
          backend:
            serviceName: bar-app
            servicePort: 8080
        - path: /project
          backend:
            serviceName: project-app
            servicePort: 8080
